# onchainchess

./: .gitattributes  .gitignore  COMPLETE_SETUP_GUIDE.md  COMPLETION_SUMMARY.md  Cargo.toml  Cargo.toml.standalone  DEPLOYMENT.md  DEPLOYMENT_INFO.txt  DEPLOYMENT_SUMMARY.md  DEPLOY_TESTNET_CONWAY.sh  DIAGNOSIS_AND_FIX.md  Dockerfile  FINAL_CHECKLIST.md  FINAL_VERIFICATION.md  FIX_SUMMARY.md  GRAPHQL_QUERIES.md  HOW_WALLETS_WORK.md  ONCHAIN_VERIFICATION.md  ON_CHAIN_IMPROVEMENTS.md  QUICK_DEPLOY.sh  QUICK_REFERENCE.md  QUICK_START.md  QUICK_TEST_COMMANDS.md  README.md  README_DEPLOYMENT.md  RESET_AND_DEPLOY.sh  START_APP.sh  START_HERE.md  START_HERE_DEPLOYMENT.md  STATUS.md  STEP_BY_STEP_SETUP.md  TEST_QUERIES.md  VERIFY_TESTNET_CONWAY.md  WALLET_DOWNLOAD_LINKS.md  WALLET_FAQ.md  WALLET_INDEX.md  WALLET_INTEGRATION.md  WALLET_QUICK_START.md  WALLET_SETUP_GUIDE.md  WALLET_VISUAL_GUIDE.md  (+5 more)
sc/: Cargo.toml
sc/src/: contract.rs  lib.rs  service.rs  state.rs
src/: contract.rs  lib.rs  service.rs  state.rs
web-frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-frontend/src/: App.css  App.jsx  index.css  main.jsx
web-frontend/src/components/: ChessBoard.jsx  GameList.jsx  MoveHistory.jsx  SplashScreen.css  SplashScreen.jsx  Toast.css  Toast.jsx  ToastContainer.jsx  WalletSelector.jsx  index.js
web-frontend/src/components/Button/: styles.module.css
web-frontend/src/context/: LineraContext.js  LineraContext.jsx
web-frontend/src/pages/Home/: index.jsx  styles.module.css
web-frontend/src/pages/Result/: index.jsx  styles.module.css
web-frontend/src/pages/Room/: index.jsx  styles.module.css
web-frontend/src/providers/: GraphQLProvider.js  GraphQLProvider.jsx  WalletProvider.jsx  index.js
web-frontend/src/services/: chessOperations.js
web-frontend/src/services/wallet/: croissant-wallet.ts  index.ts  linera-adapter.ts  linera-web-client.ts
web-frontend/src/utils/: chessUtils.js
