[package]
name = "onchainchess"
version = "0.1.0"
authors = ["Chess Game Team"]
edition = "2021"

[features]
test = []

[dependencies]
async-graphql = { version = "7.0.17", default-features = false }
async-graphql-value = "=7.0.17"
futures = "0.3"
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", rev = "524dcf390d0f532253edbc8664bb7189cb43ab61" }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git", rev = "524dcf390d0f532253edbc8664bb7189cb43ab61" }
linera-views-derive = { git = "https://github.com/linera-io/linera-protocol.git", rev = "524dcf390d0f532253edbc8664bb7189cb43ab61" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.36.0", default-features = false, features = ["sync", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["rt", "sync", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", rev = "524dcf390d0f532253edbc8664bb7189cb43ab61", features = ["test", "wasmer"] }
tokio = { version = "1.36.0", default-features = false, features = ["rt", "sync", "macros"] }

[[bin]]
name = "onchainchess_contract"
path = "src/contract.rs"

[[bin]]
name = "onchainchess_service"
path = "src/service.rs"
